@@ -1,5 +1,8 @@
 2012-11-12  Niels Möller  <nisse@lysator.liu.se>
 
+	* macros.h (ROTL64): New macro, moved from...
+	* sha512-compress.c (ROTL64): ... old location, deleted.
+
 	* serpent-internal.h [HAVE_NATIVE_64_BIT] (DROTL32): Renamed from...
 	(ROTL64): ... old name.
 	(DRSHIFT32): Renamed from ...
